--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "frontend": "file:",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.53.0"
   }
 }
