--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.53.0"
+    "react-hook-form": "^7.53.0",
+    "swr": "^2.2.5"
   }
 }
