--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "chart": "^0.1.2",
     "chart.js": "^4.4.5",
     "frontend": "file:",
     "jsonwebtoken": "^9.0.2",
