Ví điện tử VNPAY

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^43.3.1",
+    "@ckeditor/ckeditor5-react": "^9.3.1",
     "@reduxjs/toolkit": "^2.3.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
