--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.6",
     "swr": "^2.2.5"
