--- a/package.json
+++ b/package.json
@@ -20,14 +20,18 @@
     "frontend": "file:",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "mongodb": "^6.12.0",
     "next": "^14.2.14",
     "react": "^18",
+    "react-bootstrap": "^2.10.7",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-messenger-chat-plugin": "^3.0.5",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.6",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "use-debounce": "^10.0.4"
   }
 }
