--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.6",
+    "socket.io-client": "^4.8.1",
     "swr": "^2.2.5",
     "use-debounce": "^10.0.4"
   }
